--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                                 <span class="version-badge">Version 1.0.0</span>
                                 <div class="version-date">Sortie: Juillet 2025</div>
                             </div>
-                            <div class="file-size">Taille: 456 Mo KB</div>
+                            <div class="file-size">Taille: 456 Mo</div>
                         </div>
                         <button class="download-btn" onclick="downloadFile()">
                             <i class="fas fa-download"></i>
