--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                                 <span class="version-badge">Version 1.0.0</span>
                                 <div class="version-date">Sortie: Juillet 2025</div>
                             </div>
-                            <div class="file-size">Taille: 456 Mo</div>
+                            <div class="file-size">Taille: 1,2 go</div>
                         </div>
                         <button class="download-btn" onclick="downloadFile()">
                             <i class="fas fa-download"></i>
@@ -926,8 +926,8 @@
             setTimeout(() => {
                 // Create a temporary download link for the test file
                 const link = document.createElement('a');
-                link.href = 'https://github.com/Stef302/APD/releases/download/app/0x-browser.Setup.1.0.0.exe';
-                link.download = 'https://github.com/Stef302/APD/releases/download/app/0x-browser.Setup.1.0.0.exe';
+                link.href = 'https://github.com/Stef302/0x-browser-site/releases/download/app/0x-browser-1.0.0-setup.exe';
+                link.download = 'https://github.com/Stef302/0x-browser-site/releases/download/app/0x-browser-1.0.0-setup.exe';
                 link.click();
                 
                 // Reset button
